--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -55,6 +55,27 @@ h4 {
   align-items: center;
   margin-top: 0; }
 
+/*Login*/
+#Header-login {
+  grid-area: header;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0; 
+  color: white;
+}
+
+/* login JS */
+#user
+#pass
+#login
+
+#check{
+  text-align: center;
+  color: blue;
+}
+
+
 /*Navegación-logo*/
 .logo {
   height: 8rem;
@@ -78,6 +99,12 @@ h4 {
 #navegacion-web li {
   background-color: rgba(239, 247, 244, 0);
   padding: .2rem 1rem; }
+
+/*Boton buscar*/
+  #Botonbuscar {
+    color: black;
+    margin-bottom: 10px;
+  }
 
 /*Seccion-footer*/
 #footer {
@@ -105,7 +132,10 @@ section div img {
 /*Grilla*/
 #grilla-gral {
   display: grid;
-  grid-template-areas: "header" "productos" "banner" "footer";
+  grid-template-areas: "header"
+ "productos"
+ "banner"
+ "footer";
   grid-template-rows: 1frpx 1fr 1fr 50px;
   row-gap: 10px;
   height: 100vh;
@@ -114,14 +144,20 @@ section div img {
 /*Media Querie 320px*/
 @media screen and (min-width: 320px) {
   #grilla-gral {
-    grid-template-areas: "header header" "productos productos" "banner banner" "footer footer";
+    grid-template-areas: "header header"
+ "productos productos"
+ "banner banner"
+ "footer footer";
     grid-template-columns: repeat(2, 1fr); } }
 
 /*Media Querie 768px*/
 @media screen and (min-width: 768px) {
   #grilla-gral {
     grid-template-rows: 200px 1fr 1fr 50px;
-    grid-template-areas: "header header header" "productos productos productos" "banner banner banner" "footer footer footer";
+    grid-template-areas: "header header header"
+ "productos productos productos"
+ "banner banner banner"
+ "footer footer footer";
     grid-template-columns: repeat(3, 1fr); }
   /*Contenedor-index-grilla*/
   .contenedor-index {
@@ -154,7 +190,10 @@ section div img {
 /*Grilla*/
 #grilla-gral {
   display: grid;
-  grid-template-areas: "header" "productos" "banner" "footer";
+  grid-template-areas: "header"
+ "productos"
+ "banner"
+ "footer";
   grid-template-rows: 1frpx 1fr 1fr 50px;
   row-gap: 10px;
   height: 100vh;
@@ -163,14 +202,20 @@ section div img {
 /*Media Querie 320px*/
 @media screen and (min-width: 320px) {
   #grilla-gral {
-    grid-template-areas: "header header" "productos productos" "banner banner" "footer footer";
+    grid-template-areas: "header header"
+ "productos productos"
+ "banner banner"
+ "footer footer";
     grid-template-columns: repeat(2, 1fr); } }
 
 /*Media Querie 768px*/
 @media screen and (min-width: 768px) {
   #grilla-gral {
     grid-template-rows: 200px 1fr 1fr 50px;
-    grid-template-areas: "header header header" "productos productos productos" "banner banner banner" "footer footer footer";
+    grid-template-areas: "header header header"
+ "productos productos productos"
+ "banner banner banner"
+ "footer footer footer";
     grid-template-columns: repeat(3, 1fr); } }
 
 /*Media Querie 900px*/
@@ -207,7 +252,7 @@ section div img {
   margin: auto; }
 
 /*Hijo-cards*/
-.card-servicios {
+.cardservicios {
   width: 235px;
   height: 350px;
   border: solid 1px;
@@ -241,14 +286,29 @@ section div img {
   padding: 1px; }
 
 /*Fuente-titulo-servicios*/
-.p-servicios {
+#pservicios {
   font-size: 30px; }
+
+/* Color de mensaje en login */
+#mensajelog{
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+}
+
+/* Ofertas en Servicios */
+#ofertas{
+  color: yellow;
+  text-decoration:underline;
+}
 
 /*Mobile First*/
 /*Grilla*/
 #grilla-gral {
   display: grid;
-  grid-template-areas: "header" "productos" "banner" "footer";
+  grid-template-areas: "header"
+ "productos"
+ "banner"
+ "footer";
   grid-template-rows: 1frpx 1fr 1fr 50px;
   row-gap: 10px;
   height: 100vh;
@@ -257,14 +317,20 @@ section div img {
 /*Media Querie 320px*/
 @media screen and (min-width: 320px) {
   #grilla-gral {
-    grid-template-areas: "header header" "productos productos" "banner banner" "footer footer";
+    grid-template-areas: "header header"
+ "productos productos"
+ "banner banner"
+ "footer footer";
     grid-template-columns: repeat(2, 1fr); } }
 
 /*Media Querie 768px*/
 @media screen and (min-width: 768px) {
   #grilla-gral {
     grid-template-rows: 200px 1fr 1fr 50px;
-    grid-template-areas: "header header header" "productos productos productos" "banner banner banner" "footer footer footer";
+    grid-template-areas: "header header header"
+ "productos productos productos"
+ "banner banner banner"
+ "footer footer footer";
     grid-template-columns: repeat(3, 1fr); }
   /*CARDS*/
   .padre-cards {
@@ -333,7 +399,10 @@ img {
 /*Grilla*/
 #grilla-gral {
   display: grid;
-  grid-template-areas: "header" "productos" "banner" "footer";
+  grid-template-areas: "header"
+ "productos"
+ "banner"
+ "footer";
   grid-template-rows: 1frpx 1fr 1fr 50px;
   row-gap: 10px;
   height: 100vh;
@@ -342,14 +411,20 @@ img {
 /*Media Querie 320px*/
 @media screen and (min-width: 320px) {
   #grilla-gral {
-    grid-template-areas: "header header" "productos productos" "banner banner" "footer footer";
+    grid-template-areas: "header header"
+ "productos productos"
+ "banner banner"
+ "footer footer";
     grid-template-columns: repeat(2, 1fr); } }
 
 /*Media Querie 768px*/
 @media screen and (min-width: 768px) {
   #grilla-gral {
     grid-template-rows: 200px 1fr 1fr 50px;
-    grid-template-areas: "header header header" "productos productos productos" "banner banner banner" "footer footer footer";
+    grid-template-areas: "header header header"
+ "productos productos productos"
+ "banner banner banner"
+ "footer footer footer";
     grid-template-columns: repeat(3, 1fr); }
   /*Página Galeria*/
   #padre-imagenes {
@@ -397,7 +472,10 @@ img {
 /*Mobile First*/
 #grilla-gral {
   display: grid;
-  grid-template-areas: "header" "productos" "banner" "footer";
+  grid-template-areas: "header"
+ "productos"
+ "banner"
+ "footer";
   grid-template-rows: 1frpx 1fr 1fr 50px;
   row-gap: 10px;
   height: 100vh;
@@ -406,14 +484,20 @@ img {
 /*Media Querie 320px*/
 @media screen and (min-width: 320px) {
   #grilla-gral {
-    grid-template-areas: "header header" "productos productos" "banner banner" "footer footer";
+    grid-template-areas: "header header"
+ "productos productos"
+ "banner banner"
+ "footer footer";
     grid-template-columns: repeat(2, 1fr); } }
 
 /*Media Querie 768px*/
 @media screen and (min-width: 768px) {
   #grilla-gral {
     grid-template-rows: 200px 1fr 1fr 50px;
-    grid-template-areas: "header header header" "productos productos productos" "banner banner banner" "footer footer footer";
+    grid-template-areas: "header header header"
+ "productos productos productos"
+ "banner banner banner"
+ "footer footer footer";
     grid-template-columns: repeat(3, 1fr); } }
 
 /*Media Querie 900px*/
