--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -460,7 +460,7 @@ img {
 
 /*Pagina-Contacto*/
 /*Formulario_Espacio_Botones*/
-.fuente-botones {
+#fuente-botones {
   margin-bottom: 3rem; }
 
 /*Forulario_Color_fondo*/
