--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -460,11 +460,11 @@ img {
 
 /*Pagina-Contacto*/
 /*Formulario_Espacio_Botones*/
-#fuente-botones {
+#mi-boton {
   margin-bottom: 3rem; }
 
 /*Forulario_Color_fondo*/
-#formulario {
+#mi-formulario {
   background-color: white; }
 
 /*Texto_Alineacion_Extend*/
